--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,15 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "silex/silex": "^2.0"
+        "silex/silex": "^2.0",
+        "thiagoalessio/tesseract_ocr": "^0.2.1"
     },
     "autoload": {
         "psr-4": {
             "Bookify\\": "src/"
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^3.2"
     }
 }
